[package]
name = "engine"
version = "0.2.0"
authors = ["Florin Saftoiu <florin.saftoiu@soft-to-you.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies] 
windows = "0.10.0"
libc = "0.2.66"

[build-dependencies]
windows = "0.10.0"